# TruVideo

./: .gitignore  README.md  pyproject.toml
tru_video/: __init__.py
tru_video/scripts/: truvideo.py
